manifests/citest/b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citest-b-deploy
  namespace: citest
  labels:
    app: citest-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: citest-b
  template:
    metadata:
      labels:
        app: citest-b
    spec:
      containers:
        - name: citest-b
          image: gcr.io/test-teraform-259205/citest:b
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: citest-b-svc
  namespace: citest
spec:
  type: NodePort
  selector:
    app: citest-b
  ports:
    - port: 8080
      targetPort: 8080
