manifests/citest/c.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: citest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citest-deploy
  namespace: citest
  labels:
    app: citest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: citest
  template:
    metadata:
      labels:
        app: citest
    spec:
      containers:
        - name: citest
          image: gcr.io/test-teraform-259205/citest@sha256:5edbf69dc94398d5d975f5b87056ad71edef0cd0f91ee53b98a3607504d67590
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: citest-c-svc
  namespace: citest
spec:
  type: LoadBalancer
  selector:
    app: citest
  ports:
    - port: 80
      targetPort: 8080
