manifests/citest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: citest-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: citest-ingress
spec:
  rules:
    - host: aaa.citest.tk
      http:
        paths:
        - backend:
            serviceName: citest-a-svc
            servicePort: 8080
    - host: bbb.citest.tk
      http:
        paths:
          - backend:
              serviceName: citest-b-svc
              servicePort: 8080
